--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
-spring.security.user.name =Aishwarya
-spring.security.user.password=Aishwarya
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui-user.html
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
